<resources>
    <string name="app_name">AudioCall</string>
    <string name="logo">logo</string>
    <string name="welcome_label_text">AudioCall Demo</string>

    <string name="prompt_login">USER@APP.ACCOUNT</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_call_to">CALL TO</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_token">LOG IN WITH TOKEN</string>
    <string name="action_call">Audio Call</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="alert_login_failed">Login failed</string>
    <string name="alert_login_failed_account_frozen">Login failed due to account is frozen. Please contact your admin</string>
    <string name="alert_login_failed_internal_error">Login failed due to internal error. Please try again</string>
    <string name="alert_login_failed_timeout">Login failed due to timeout. Please try again</string>
    <string name="alert_login_failed_network_issues">Login failed due to network issues. Please try again</string>
    <string name="alert_login_failed_token_expired">Login failed due to token being expired. Please use password</string>
    <string name="alert_title_logout">Log out</string>
    <string name="alert_content_logout">You are going to log out! Proceed?</string>
    <string name="alert_title_disconnected">Connection error</string>
    <string name="alert_content_disconnected">Connection to server is lost. Will re-login on a new call</string>
    <string name="alert_content_cannot_make_call">Failed to make a call. Cannot connect to the Voximplant Cloud</string>
    <string name="alert_title_connection_failed">Connection failed</string>
    <string name="alert_content_connection_failed">Connection failed, check your internet connection and try again</string>
    <string name="alert_select_audio_device">Audio device</string>
    <string name="alert_positive_button">OK</string>
    <string name="no_valid_token">No valid token found</string>

    <string name="toast_midcall_operation_failed">%1$s is failed due to %2$s</string>

    <string name="title_activity_main">AudioCall</string>

    <string name="log_out">Log out</string>
    <string name="logout_button">logout button</string>

    <string name="hangup_call">Hangup call</string>
    <string name="mute_audio">Mute/unmute audio</string>
    <string name="speaker_on_off">Enable/disable speakerphone</string>
    <string name="hold_unhold_call">Hold/unhold call</string>

    <string name="call_failed">Call failed</string>
    <string name="call_connecting">Connecting…</string>
    <string name="call_ringing">Ringing…</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="answer_call">Answer call</string>
    <string name="decline_call">"Decline call"</string>
    <string name="incoming_call">Incoming call</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>


    <string name="call_service_notification_text">call in progress</string>

    <string name="separator_view_text">or</string>
    <string name="logged_in_as">Logged in as\u0020</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="keypad">keypad</string>
    <string name="mute">mute</string>
    <string name="audio">audio</string>
    <string name="hold">hold</string>
    <string name="resume">resume</string>
    <string name="unmute">unmute</string>
    <string name="cancel">Cancel</string>
    <string name="call_back">Call back</string>
    <string name="voximplant_com">.voximplant.com</string>
    <string name="audio_call_demo">AudioCall Demo</string>
    <string name="voximplant">Voximplant</string>

    <string name="hide">hide</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="asterisk">*</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="number_sign">#</string>
    <string name="reason">Reason</string>
    <string name="is_calling">is calling</string>
    <string name="somebody">Somebody</string>
    <string name="notificationDecline">DECLINE</string>
    <string name="notificationAnswer">ANSWER</string>
</resources>
