<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.call.CallActivity">

    <ImageButton
        android:id="@+id/audio_device_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/speaker_on_off"
        app:layout_constraintStart_toEndOf="@+id/keypad_button"
        app:layout_constraintTop_toTopOf="@+id/keypad_button"
        app:srcCompat="@drawable/ic_hearing_black_40dp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        app:tint="@color/colorButton" />

    <ImageButton
        android:id="@+id/hangup_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_image_red_passive"
        android:contentDescription="@string/hangup_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_call_end_black_45dp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        app:tint="@color/colorRed" />

    <ImageButton
        android:id="@+id/mute_audio_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/mute_audio"
        app:layout_constraintEnd_toStartOf="@+id/keypad_button"
        app:layout_constraintTop_toTopOf="@+id/keypad_button"
        app:srcCompat="@drawable/ic_mic_off_black_40dp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        app:tint="@color/colorButton" />

    <ImageButton
        android:id="@+id/keypad_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/mute_audio"
        app:layout_constraintBottom_toTopOf="@+id/hold_button"
        app:layout_constraintStart_toStartOf="@+id/hold_button"
        app:srcCompat="@drawable/ic_dialpad_black_40dp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        app:tint="@color/colorButton" />

    <ImageButton
        android:id="@+id/hold_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/mute_audio"
        app:layout_constraintBottom_toTopOf="@+id/hangup_button"
        app:layout_constraintStart_toStartOf="@+id/hangup_button"
        app:srcCompat="@drawable/ic_pause_black_40dp"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp"
        app:tint="@color/colorButton" />

    <TextView
        android:id="@+id/caller_name_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:lines="1"
        android:minLines="1"
        android:text="@string/outgoing_call"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/mute_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="5dp"
        android:text="@string/mute"
        app:layout_constraintEnd_toEndOf="@id/mute_audio_button"
        app:layout_constraintStart_toStartOf="@id/mute_audio_button"
        app:layout_constraintTop_toBottomOf="@+id/mute_audio_button" />

    <TextView
        android:id="@+id/keypad_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="5dp"
        android:text="@string/keypad"
        app:layout_constraintEnd_toEndOf="@id/keypad_button"
        app:layout_constraintStart_toStartOf="@+id/keypad_button"
        app:layout_constraintTop_toBottomOf="@+id/keypad_button" />

    <TextView
        android:id="@+id/audio_device_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="5dp"
        android:text="@string/audio"
        app:layout_constraintEnd_toEndOf="@+id/audio_device_button"
        app:layout_constraintStart_toStartOf="@+id/audio_device_button"
        app:layout_constraintTop_toBottomOf="@+id/audio_device_button" />

    <TextView
        android:id="@+id/hold_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="5dp"
        android:text="@string/hold"
        app:layout_constraintEnd_toEndOf="@+id/hold_button"
        app:layout_constraintStart_toStartOf="@+id/hold_button"
        app:layout_constraintTop_toBottomOf="@+id/hold_button" />

    <TextView
        android:id="@+id/call_status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/call_connecting"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caller_name_view" />

    <TextView
        android:id="@+id/call_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_status_view" />

    <include
        layout="@layout/key_pad_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/hangup_button"
        app:layout_constraintEnd_toEndOf="@+id/audio_device_button"
        app:layout_constraintStart_toStartOf="@+id/mute_audio_button"
        app:layout_constraintTop_toBottomOf="@id/call_timer_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
